<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names_meaning"
        android:textColor="@color/black"
        android:textSize="39sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="200dp"
        app:cardBackgroundColor="#0526DF"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/babyboy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="90dp"
            android:text="@string/male_baby_number"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="135dp"
            android:text="@string/male_name"
            android:textColor="#A1ffffff"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="180dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#D31253"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/baby" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="90dp"
            android:text="@string/female_number"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="135dp"
            android:text="@string/female_name"
            android:textColor="#A1ffffff"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="360dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:src="@drawable/loupe" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginBottom="350dp"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/medal" />

        <TextView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            android:text="@string/top_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold|normal" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/next" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginBottom="250dp"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/like" />

        <TextView
            android:layout_width="185dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            android:text="@string/top_like_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold|normal" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/next" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginBottom="150dp"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/word" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            android:text="Alfavit bo'yicha"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold|normal" />
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/next" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="30dp"
        app:cardMaxElevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/home" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/user" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/heart" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/setting" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>