<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:text="@string/san_diago"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textColor="#77FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:src="@drawable/weather1"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/_77"
                    android:textSize="40sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/o"
                        android:textSize="10sp"
                        android:layout_marginLeft="6dp"/>
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:src="@drawable/next"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:layout_marginTop="-4dp"
                    android:layout_marginStart="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_42_pm"
                        android:textColor="#A1FFFFFF"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:textSize="20sp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/weather1"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/back2"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:text="@string/paris"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textColor="#77FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:src="@drawable/sunny"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/_32"
                    android:textSize="40sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/o"
                        android:textSize="10sp"
                        android:layout_marginLeft="6dp"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:src="@drawable/next"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:layout_marginTop="-4dp"
                    android:layout_marginStart="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_42_pm"
                        android:textColor="#A1FFFFFF"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:textSize="20sp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/weather1"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/back3"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="normal"
                        android:textColor="@color/white"
                        android:text="@string/new_york"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current"
                        android:textColor="#77FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/cloudy" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/_56"
                    android:textSize="40sp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="@string/o"
                        android:textSize="10sp"
                        android:layout_marginLeft="6dp"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:src="@drawable/next"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:layout_marginTop="-4dp"
                    android:layout_marginStart="8dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_42_pm"
                        android:textColor="#A1FFFFFF"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:textSize="20sp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/weather1"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>